objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Trained__c</fullName>
        <label>Date Trained</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Amount__c</fullName>
        <formula>IF(CONTAINS( TEXT(Group__c),'Revenue'),ROUND(UnitPrice-Discount__c,0),ROUND(UnitPrice,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Total_Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in calculation of Total Credits for Nintex - Closing Documents - Closing Statement</description>
        <inlineHelpText>OIP + NY mortgage tax paid by Unison (if applicable)</inlineHelpText>
        <label>Include in Total Credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Total_Debits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Total Debits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>This field is used in Roll up summary</description>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Training__c</fullName>
        <label>Scheduled Training</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Scheduled Training</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Escrow Fee</fullName>
                </value>
                <value>
                    <fullName>Government Fee</fullName>
                </value>
                <value>
                    <fullName>Property Report Fee</fullName>
                </value>
                <value>
                    <fullName>Attorney Fee</fullName>
                </value>
                <value>
                    <fullName>Fee Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>